# supabase-rls-recursion-policy-subquery

./: README.md  pyproject.toml
supabase/: config.toml  seed.sql
supabase/migrations/: 0001_init_teams_memberships.sql  0002_naive_membership_policy.sql  0003_security_definer_membership_helper.sql  0004_exists_subquery_against_teams.sql  0004_jwt_app_metadata_policy.sql  0004_non_recursive_exists_policy.sql
supabase/scripts/: expected_recursion_error.txt  recursion_trace.sql  recursion_trace_notes.md  reproduce_recursion.sql  trace_recursion.sql
supabase/tests/: policies_rls_test.sql  policy_membership_access_paths_test.sql  rls_membership_access.sql  rls_membership_policy.sql  rls_memberships.sql
tests/: _sql.py  test_bootstrap_schema.py  test_jwt_app_metadata_policy.py  test_naive_membership_policy.py  test_non_recursive_exists_policy.py  test_pgtap_access_paths.py  test_pgtap_policy_coverage.py  test_recursion_reproduction.py  test_recursion_trace.py  test_security_definer_fix.py
