[project]
name = "supabase-rls-recursion-policy-subquery"
version = "0.1.0"
description = "Companion code for the Supabase RLS recursion / policy-subquery tutorial."
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
